TINY-11462: Add margin-top to accessibility issue content for improved spacing

--- a/modules/oxide/src/less/theme/components/accessibility-checker/accessibility-checker.less
+++ b/modules/oxide/src/less/theme/components/accessibility-checker/accessibility-checker.less
@@ -72,6 +72,7 @@
   }
 
   #accessibility-issue__contentID {
+    margin-top: @pad-md;
     margin-bottom: @pad-md;
 
     span:first-child {
